# wall-runner

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml  unit-test.yml
assets/: land.flac  wall-run.flac
src/: camera.rs  camera_player_sync.rs  level.rs  main.rs  player.rs  scene.rs
src/camera/: mod.rs  plugin_camera.rs  resource_camera_input.rs  resource_camera_settings.rs  resource_camera_state.rs  startup_system_camera_setup.rs  system_camera_look.rs  system_camera_position.rs  system_camera_reset.rs  system_camera_tilt.rs
src/input/: event_input.rs  mod.rs  plugin_input.rs  system_gamepad_connections.rs  system_gamepad_input.rs  system_keyboard_input.rs
src/player/: mod.rs  player_jump.rs  player_move.rs  player_plugin.rs  player_settings.rs  player_state.rs  plugin_player.rs  post_system_player_dump_kinematics.rs  post_system_player_kinematics.rs  post_system_player_sync_state_position.rs  post_system_player_update_state.rs  pre_system_player_apply_input.rs  pre_system_player_compute_contacts.rs  pre_system_player_contacts.rs  pre_system_player_init_kinematics.rs  pre_system_player_kinematics.rs  pre_system_player_load_physics_into_state.rs  pre_update_system_player_contacts.rs  resource_player_input.rs  resource_player_kinematics.rs  resource_player_settings.rs  resource_player_state.rs  startup_system_player_setup.rs  system_player_audio.rs  system_player_crouch.rs  system_player_gravity.rs  system_player_jump.rs  system_player_move.rs  system_player_reset.rs  update_system_player_jump.rs  update_system_player_move.rs
src/utils/: assert_almost_eq.rs  mod.rs  rotate_vec.rs  vec3_horizontal_vec2.rs
wall_runner_camera/: Cargo.toml
wall_runner_camera/src/: component_camera_input.rs  component_camera_state.rs  event_camera_control.rs  lib.rs  plugin_camera.rs  resource_camera_input.rs  resource_camera_settings.rs  resource_camera_state.rs  startup_system_camera_setup.rs  system_camera_look.rs  system_camera_position.rs  system_camera_reset.rs  system_camera_tilt.rs
wall_runner_events/: Cargo.toml
wall_runner_events/src/: lib.rs
wall_runner_game/: Cargo.toml
wall_runner_game/src/: camera_player_sync.rs  level.rs  lib.rs  post_system_player_level_finish.rs  pre_system_camera_player_sync.rs  pre_system_level_player_sync.rs  system_cursor_grab.rs  window.rs
wall_runner_input/: Cargo.toml
wall_runner_input/src/: lib.rs  plugin_input.rs  system_gamepad_connections.rs  system_gamepad_input.rs  system_keyboard_input.rs
wall_runner_levels/: Cargo.toml
wall_runner_player/: Cargo.toml
wall_runner_utils/: Cargo.toml
(+43 files in other folders)
