[package]
name = "bevy-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7", features = ["dynamic"] }
bevy_config_cam = { version = "0.3.0"} # <--
rand = "0.8.5"
bevy_atmosphere = "0.3.1"
bevy_rapier3d = "0.14.1"