[package]
name = "bevy-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.7.0"
rand = "0.8.5"
bevy_atmosphere = "0.3.1"
bevy_rapier3d = "0.14.1"
bevy_kira_audio = "0.10.0"

[features]
default = [
    "bevy/bevy_winit",
    "bevy/wayland", # linux
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy/animation",
    "bevy/bevy_gilrs",
    "bevy/hdr",
    "bevy/filesystem_watcher",
    "bevy_kira_audio/wav",
    "bevy_kira_audio/flac"
]

dev = [
    "bevy/dynamic",
]
