[package]
name = "wall-runner"
version = "0.2.0"
edition = "2021"
categories = ["games"]
exclude = ["assets/", ".github"]
repository = "https://github.com/gabotechs/wall-runner"

[workspace]
resolver = "2"
members = [
    "wall_runner_game",
    "wall_runner_player",
    "wall_runner_camera",
    "wall_runner_input",
    "wall_runner_levels",
    "wall_runner_utils"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
wall_runner_game = { path = "wall_runner_game" }
